fix(styles): change some basic styles, customize scrollbar

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,13 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-*,
-*::before,
-*::after {
-  -webkit-tap-highlight-color: transparent;
-}
+@layer base {
+  :root {
+    --scrollbar-width: 6px;
+  }
 
-body {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
+  *,
+  *::before,
+  *::after {
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  *::selection {
+    @apply bg-blue-200;
+  }
+
+  body {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+  }
+
+  /* Custom scrollbar */
+
+  ::-webkit-scrollbar {
+    width: var(--scrollbar-width);
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-gray-100;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-gray-500/80;
+    border-radius: var(--scrollbar-width);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-500/100;
+  }
 }
